force-app/main/default/objects/abd_Ownership__c/abd_Ownership__c.object-meta.xml
<CustomObject>
    <label>Ownership</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ownerships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>