force-app/main/default/objects/abd_Ownership__c/fields/abd_Company__c.field-meta.xml
<CustomField>
    <fullName>abd_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ownerships</relationshipLabel>
    <relationshipName>Ownerships</relationshipName>
    <type>Lookup</type>
</CustomField>