force-app/main/default/objects/abd_Ownership__c/fields/abd_Contact__c.field-meta.xml
<CustomField>
    <fullName>abd_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ownerships</relationshipLabel>
    <relationshipName>Ownerships</relationshipName>
    <type>Lookup</type>
</CustomField>