force-app/main/default/objects/abd_Ownership__c/fields/abd_Percent_of_Ownership__c.field-meta.xml
<CustomField>
    <fullName>abd_Percent_of_Ownership__c</fullName>
    <label>Percent of Ownership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>