force-app/main/default/objects/abd_Ownership__c/fields/abd_Position__c.field-meta.xml
<CustomField>
    <fullName>abd_Position__c</fullName>
    <label>Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>