force-app/main/default/objects/abd_Ownership__c/fields/abd_Possess_Federal_Gambling_Stamp__c.field-meta.xml
<CustomField>
    <fullName>abd_Possess_Federal_Gambling_Stamp__c</fullName>
    <label>Possess Federal Gambling Stamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_Yes_No</valueSetName>
    </valueSet>
</CustomField>